# dvm-ng

./: .buildconfig  Cargo.toml  TODO.md
migrations/2018-04-21-091654_Admin/: down.sql  up.sql
migrations/2018-04-21-103238_Candidate/: down.sql  up.sql
migrations/2018-04-21-105444_Constituency/: down.sql  up.sql
migrations/2018-04-21-110112_ElectionSession/: down.sql  up.sql
migrations/2018-04-21-111105_Vote/: down.sql  up.sql
src/: database.rs  main.rs  main_app.rs  schema.rs
src/glade_ui/: admin_data_model.glade  candidate.glade~  candidate_data_model.glade  constituency.glade~  constituency_data_model.glade  control_panel_toplevel.glade  data_entry.glade  data_entry.glade~  data_entry_toplevel.glade  data_model_common.glade  data_model_submit_cancel_buttons.glade  data_model_submit_cancel_buttons.glade~  election_session.glade~  election_session_data_model.glade  generic_list_view.glade  generic_list_view.glade~  home.glade  main.glade  main.glade~  main_login.glade  main_login.glade~  styles.css
src/main_app/: data_entry_view.rs  data_entry_view_impl.rs  delayed_initializer.rs  mod.rs
src/models/: Admin.rs  Candidate.rs  Constituency.rs  ElectionSession.rs  IDatabaseTable.rs  Vote.rs  mod.rs
src/views/: data_entry_view.rs  home_view.rs  macros.rs  main_login_view.rs  mod.rs  view.rs
src/views/data_entry_view/: mod.rs
